--- a/app/src/main/res/layout/activity_rec.xml
+++ b/app/src/main/res/layout/activity_rec.xml
@@ -61,7 +61,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1">
+            android:layout_weight="0.5">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -110,9 +110,12 @@
                     android:id="@+id/bRecuperar"
                     android:layout_width="150dp"
                     android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="15dp"
                     android:background="@drawable/boton_redondo"
-                    android:text="@string/Recuperar"
                     android:gravity="center"
+                    android:textStyle="bold"
+                    android:text="@string/Recuperar"
                     android:textColor="@color/mediumblue"
                     android:textSize="20dp" />
 
