--- a/app/src/main/res/drawable-hdpi/formas.xml
+++ b/app/src/main/res/drawable-hdpi/formas.xml
@@ -2,12 +2,12 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/gray" />
+            <solid android:color="#00008b" />
         </shape>
     </item>
     <item android:left="2dp" android:right="2dp" android:top="2dp" android:bottom="2dp">
         <shape android:shape="rectangle">
-            <solid android:color="#ffffff" />
+            <solid android:color="#add8e6" />
         </shape>
     </item>
 </layer-list>
